<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    style="@style/MainTheme">

    <TextView
        android:id="@+id/main_title"
        android:text="@string/app_name"
        style="@style/TitleTextView"/>

    <Button
        android:id="@+id/guess_picker_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/main_title"
        style="@style/Button"
        android:text="@string/guess"/>

    <Button
        android:id="@+id/take_photo_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/guess_picker_button"
        style="@style/Button"
        android:text="@string/take_photo"/>

    <Button
        android:id="@+id/scores_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/take_photo_button"
        style="@style/Button"
        android:text="@string/high_score"/>

    <Button
        android:id="@+id/my_gtp_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/scores_button"
        style="@style/Button"
        android:text="@string/my_guess_this_place"/>

    <Button
        android:id="@+id/help_about_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/my_gtp_button"
        style="@style/Button"
        android:text="@string/help_about"/>

</RelativeLayout>
</ScrollView>