<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/current_password"
            android:id="@+id/current_password"
            style="@style/TitleTextView"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_current_password"
            android:ems="10"
            android:id="@+id/editText_current_password"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/new_password"
            android:id="@+id/new_password_first"
            style="@style/TitleTextView"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/your_new_password"
            android:ems="10"
            android:id="@+id/editText_new_password_first"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/new_password"
            android:id="@+id/new_password_second"
            style="@style/TitleTextView"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/re_enter_new_password"
            android:ems="10"
            android:id="@+id/editText_new_password_second"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />
        <Button
            android:text="@string/change_password"
            android:id="@+id/button_change_password"
            android:layout_gravity="center_horizontal"
            style="@style/Button"/>
    </LinearLayout>
</ScrollView>