<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".activities.MySubmissionsActivity"
    style="@style/MainTheme">

    <TextView
        android:id="@+id/my_submissions_title"
        android:text="@string/my_submissions_title"
        style="@style/MySubmissionsTextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/approved_button"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MySubmissionsButton"
            android:text="@string/approved_submissions"/>
        <Button
            android:id="@+id/pending_button"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MySubmissionsButton"
            android:text="@string/pending_submissions"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            />
        <Button
            android:id="@+id/denied_button"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MySubmissionsButton"
            android:text="@string/denied_submissions"/>
    </LinearLayout>

    <TextView
        android:id="@+id/no_images_textview"
        android:layout_gravity="center"
        style="@style/NormalTextView"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_images"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        />

</LinearLayout>
</ScrollView>
